# SciT_snakemake

./: README.md
sciT/: .gitignore  Snakefile  barcode_id_config.txt  config.yaml  dpm.fa  fastq_screen.conf  multiqc_config.yml  prepare_environments.sh  sciT_conda_environment.yaml
sciT/rules/bam_processing/: bigwig.smk  counting.smk  htseq.yaml  samtools.smk  sciT_tagging.smk
sciT/rules/fastq_processing/: cutadapt.yaml
sciT/rules/mapping/: star.smk  star.yaml
sciT/rules/qc/: covprofile.smk  fastq_screen.smk  fastq_screen.yaml
sciT/rules/utils/: bcftools.smk  bcftools.yaml
software_repositories/MultiQC/: pyproject.toml
software_repositories/MultiQC/multiqc/: config_defaults.yaml  search_patterns.yaml
software_repositories/MultiQC/multiqc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
software_repositories/MultiQC/multiqc/modules/scmo/: __init__.py  scmo.py
software_repositories/MultiQC/multiqc/plots/plotly/: plot.py
software_repositories/sciT/: README.md  pyproject.toml
software_repositories/sciT/sciTtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
software_repositories/sciT/scit/: cell_filter.py  core.py  prepare_hybrid_vcf_for_STAR.py  qc.py  sciT_read_recoder.py  sciT_tagger.py  sciT_umi.py  split_bam_by_allele.py  transcriptome_bam_to_loom.py
